[gd_scene load_steps=6 format=3 uid="uid://du5ibbcy7fqj5"]

[ext_resource type="Script" path="res://scripts/Minigame.gd" id="1_21o8x"]
[ext_resource type="Texture2D" uid="uid://ch0gprprcm6i7" path="res://images/backgrounds/Green.png" id="2_cfgos"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v1ix1"]
texture = ExtResource("2_cfgos")

[sub_resource type="Theme" id="Theme_ykxj0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55lgv"]
content_margin_left = 18.0
content_margin_top = 15.0
content_margin_right = 14.0
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0253638, 0.0253638, 0.0253638, 1)

[node name="Minigame" type="Node2D"]
script = ExtResource("1_21o8x")

[node name="InitialTimer" type="Timer" parent="."]
process_callback = 0

[node name="GameTimer" type="Timer" parent="."]

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_v1ix1")

[node name="Label" type="Label" parent="."]
offset_left = 536.0
offset_top = 144.0
offset_right = 688.0
offset_bottom = 183.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="InitialTimerLabel" type="Label" parent="."]
offset_left = 464.0
offset_top = 216.0
offset_right = 504.0
offset_bottom = 239.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="GameTimerLabel" type="Label" parent="."]
offset_left = 608.0
offset_top = 216.0
offset_right = 648.0
offset_bottom = 239.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 512.0
offset_top = 272.0
offset_right = 680.0
offset_bottom = 429.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_ykxj0")
text = "Start Countdown"

[node name="counter" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "GET MUSHIES"

[node name="confirm" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Confirm"

[node name="Instruction" type="Label" parent="."]
offset_left = 96.0
offset_top = 88.0
offset_right = 387.0
offset_bottom = 536.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_55lgv")
text = "Instructions:

1. Pressing \"Start Countdown\"
will start a 3 second timer. 
Once the 3 second timer ends,
a 10 second timer will start.

2. While the 10 second timer is
running, click the \"GET MUSHIES\" 
button as many times as you can.
One click = one Mushie earned.

3. Upon completion, pressing
\"Confirm\" will send you back to
the Terrarium."

[node name="Button" type="Button" parent="."]
offset_right = 88.0
offset_bottom = 32.0
text = "Go Home"

[connection signal="pressed" from="VBoxContainer/counter" to="." method="_on_counter_pressed"]
[connection signal="pressed" from="VBoxContainer/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
